<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/menu_administrar"
      app:showAsAction="ifRoom|withText"
      android:title="@string/menu_administrar"
      android:onClick="logearse"/>

  <item
      android:id="@+id/menu_categorias"
      app:showAsAction="ifRoom|withText"
      android:title="@string/menu_categorias">
    <menu>
      <item
          android:id="@+id/menu_bar"
          app:showAsAction="ifRoom|withText"
          android:title="@string/menu_bar" />
      <item
          android:id="@+id/menu_cafeteria"
          app:showAsAction="ifRoom|withText"
          android:title="@string/menu_cafeteria" />
      <item
          android:id="@+id/menu_restaurante"
          app:showAsAction="ifRoom|withText"
          android:title="@string/menu_restaurante" />

      <item
          android:id="@+id/menu_todas"
          app:showAsAction="ifRoom|withText"
          android:title="@string/menu_todas" />

    </menu>

  </item>

</menu>