<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mostrar"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_mostrar" />
    <item
        android:id="@+id/menu_buscar_una"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_buscar_una" />
    <item
        android:id="@+id/menu_insertar"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_insertar" />
    <item
        android:id="@+id/menu_modificar"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_modificar" />
    <item
        android:id="@+id/menu_borrar"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_borrar" />

</menu>