<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dip"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <TextView android:id="@+id/tvUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text=""
        android:gravity="center"
        android:textSize="20dip"
        android:textColor="#FCF9F9"/>

    <TextView android:id="@+id/tvContraseña"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:text="@string/tvContraseña"
        android:gravity="center"
        android:textSize="20dip"
        android:textColor="#0b84aa"/>

    <EditText
        android:id="@+id/txtPassRegistro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="30dip" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox" />


    <Button android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:background="@drawable/boton_redondeado"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/btnRegister"
        android:textColor="?android:attr/textColorHintInverse"
        app:backgroundTint="?android:attr/textColorHint"/>


</LinearLayout>